# Human_Nao_Interaction

./: CMakeLists.txt  README.md  package.xml
hri_audio/: CMakeLists.txt  package.xml
hri_audio/hri_audio/: microphone_stream.py
hri_audio/launch/: chat_launch.py
hri_audio/scripts/: chat_client.py  chat_move_node.py  chat_move_sing_node.py  chat_node.py  chat_service.py  g2stt_service.py  gstt_client.py  gstt_service.py  gtts_client.py  gtts_service.py  led_action_client.py  test_action.py  test_audio.py
hri_audio/src/: record2file.cpp  record2file_old.cpp  test_rec.cpp
hri_interfaces/: CMakeLists.txt  package.xml
hri_interfaces/action/: LedsPlay.action
hri_interfaces/msg/: LedModes.msg
hri_moves/: CMakeLists.txt  CMakeLists2.txt  CMakeListsB.txt  package.xml
hri_moves/include/hri_moves/: chat_action_client.hpp  chat_action_server.hpp  chat_service_client.hpp  gstt_service_client.hpp  gtts_service_client.hpp  head_track_action_server.hpp  head_track_action_server2.hpp  joints_play_action_client.hpp  joints_play_action_server.hpp  led_action_client.hpp  led_action_server.hpp
hri_moves/launch/: head_track_launch.py
hri_moves/moves/: up_arm.txt
hri_moves/moves_old/: big.txt  down.txt  fear.txt  hello.txt  hello_quick.txt  hello_quick_old.txt  left.txt  little.txt  right.txt  up.txt  you.txt
hri_moves/references/: composed_main_example..cpp
hri_moves/src/: chat_action_client.cpp  chat_action_server.cpp  chat_service_client.cpp  gstt_service_client.cpp  gtts_service_client.cpp  head_track_action_client.cpp  head_track_action_server.cpp  head_track_action_server2.cpp  head_track_action_server3.cpp  joints_play_action_client.cpp  joints_play_action_server.cpp  joints_play_action_server_old.cpp  led_action_client.cpp  led_action_server.cpp  nao_pos_action_client_OLD.cpp  naosoccer_client.cpp  record.cpp  wait_service_server.cpp
hri_vision/: package.xml  setup.py
hri_vision/hri_vision/: face_track_client.py  face_track_server.py
src/: record.cpp
