<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_audio</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bnontn89@gmail.com">antbono</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sound_play</depend>
  <depend>hri_interfaces</depend>
  <depend>hri_moves</depend>
  <depend>nao_lola_sensor_msgs</depend>
  <depend>nao_lola_command_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
